[tool.poetry]
name = "hack-14er"
version = "0.1.0"
description = ""
authors = ["Ben Dempe <dempeb18@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gpiozero = "^2.0.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
